--- a/src/Home/Menu/styles.scss
+++ b/src/Home/Menu/styles.scss
@@ -49,7 +49,6 @@
       margin-top: 0;
       margin-bottom: 40px;
       opacity: 0.6;
-      font-family: 'Museo300';
       font-weight: normal;
     }
 
