--- a/src/Home/styles.scss
+++ b/src/Home/styles.scss
@@ -37,6 +37,7 @@
 
           ion-icon {
             padding: 2px;
+            color: var(--ion-color-primary-contrast);
           }
 
           ion-label {
