--- a/src/common/Components/SpeciesList/styles.scss
+++ b/src/common/Components/SpeciesList/styles.scss
@@ -4,9 +4,6 @@
 
     #feedback-request {
       border-radius: 10px;
-      ion-card-title {
-        font-family: 'Museo500';
-      }
     }
   }
 
@@ -41,7 +38,6 @@
         min-height: 3.6em;
         line-height: 1.3em;
         text-align: center;
-        font-family: 'Museo700';
         z-index: 10;
       }
 
@@ -81,7 +77,7 @@
         top: 0;
         height: 60%;
         width: 70%;
-        background: #edf4e0d1;
+        background: var(--ion-color-primary-fade);
         border-radius: 50%;
         transform: translate(50%, -50%);
         box-shadow: 0 0 15px 5px #e6e6e6;
@@ -94,7 +90,7 @@
           position: absolute;
           bottom: 4%;
           left: 16%;
-          color: #525644;
+          color: var(--ion-color-primary-shade);
         }
       }
     }
