--- a/src/common/theme.scss
+++ b/src/common/theme.scss
@@ -1,12 +1,13 @@
 @import '@flumens/ionic/dist/themes/rounded.css';
 
 :root {
-  --ion-color-primary: #7c2366;
-  --ion-color-primary-rgb: 124, 35, 102;
-  --ion-color-primary-contrast: #ffffff;
-  --ion-color-primary-contrast-rgb: 255, 255, 255;
-  --ion-color-primary-shade: #6d1f5a;
-  --ion-color-primary-tint: #893975;
+  --ion-color-primary: #9f3400;
+  --ion-color-primary-rgb: 199, 121, 82;
+  --ion-color-primary-contrast: #fff;
+  --ion-color-primary-contrast-rgb: 0, 0, 0;
+  --ion-color-primary-shade: #692402;
+  --ion-color-primary-tint: #cd8663;
+  --ion-color-primary-fade: #f8d2c09f;
 
   --ion-color-secondary: #9a6612;
   --ion-color-secondary-rgb: 0, 142, 236;
